# edu-stdin

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt  greetings.cpp  greetings.h
src/: CMakeLists.txt  main.cpp  main1.cpp  main2.cpp  main3.cpp
